:pencil2: fixed grammar mistakes in suvrey frontend

--- a/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
+++ b/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
@@ -40,10 +40,10 @@
     </div>  
     <mat-divider></mat-divider>
     <div class = "medical_stuff">
-        <label id="Doctor"><b>Medical stuff</b></label>       
+        <label id="Doctor"><b>Medical staff</b></label>       
     </div>
     <mat-divider></mat-divider>
-    <label id = "questions">How would you rate our medical stuff?</label>
+    <label id = "questions">How would you rate our medical staff?</label>
     <div>
         <mat-radio-group        
         class="example-radio-group2"
@@ -61,7 +61,7 @@
         </mat-radio-group>
     </div>  
     <mat-divider></mat-divider>
-    <label id = "questions">How would you rate our medical stuff politeness?</label>
+    <label id = "questions">How would you rate our medical staff politeness?</label>
     <div>
         <mat-radio-group        
         class="example-radio-group1"
