--- a/GraphicEditor/View/Building1FirstFloorPlan.xaml
+++ b/GraphicEditor/View/Building1FirstFloorPlan.xaml
@@ -5,14 +5,18 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GraphicEditor"
       mc:Ignorable="d" 
+      Loaded="Building1Objects"
       d:DesignHeight="652" d:DesignWidth="766"
       Title="Building1FirstFloorPlan">
 
     <Grid>
-        <Canvas x:Name="canvasBuild1fl1" Background="MintCream">
+        <Canvas x:Name="canvasH1F1" Background="MintCream">
             <Label Content="Hospital 1" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="249" Canvas.Top="36"/>
             <Image Source="arrowUp.png" Width="60" Canvas.Left="348" Canvas.Top="113" MouseLeftButtonDown="mouseClickArrowUp"/>
             <Image Source="arrowDown.png" Width="60" Canvas.Left="348" Canvas.Top="495" MouseLeftButtonDown="mouseClickArrowDown"/>
+            <Label Content="Hospital 1" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="249" Canvas.Top="36"/>
+            <Image Source="/View/icons/arrowUp.png" Width="60" Canvas.Left="348" Canvas.Top="113" MouseLeftButtonDown="mouseClickArrowUp"/>
+            <Image Source="/View/icons/arrowDown.png" Width="60" Canvas.Left="348" Canvas.Top="495" MouseLeftButtonDown="mouseClickArrowDown"/>
             <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
             <Rectangle Fill="#dca0d3" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Top="356" Canvas.Left="86" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
             <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
@@ -65,10 +69,48 @@
             <Rectangle Fill="#77c588" Height="100" Width="50" Canvas.Left="331" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
             <Rectangle Fill="#77c588" Height="100" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
             <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"  />
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="1.34,0.62"/>
+            <Rectangle Fill="#ffdf99" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="1.34,0.62"/>
             <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
             <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="196" RenderTransformOrigin="1.34,0.62" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" />
+            <Rectangle Fill="#ffdf99" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="196" RenderTransformOrigin="1.34,0.62" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" />
+
+            <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
+            <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="391" Canvas.Top="257"/>
+            <Line X1="10" Y1="35" X2="15" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="258"/>
+            <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="442" Canvas.Top="263"/>
+            <Line X1="35" Y1="10" X2="30" Y2="5" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="423" Canvas.Top="263"/>
+            <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="429" Canvas.Top="253" RenderTransformOrigin="0.5,0.5">
+                <Line.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="271.364"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Line.RenderTransform>
+            </Line>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="196"/>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="481" Canvas.Top="196"/>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="356"/>
+            <Line X1="0" Y1="0" X2="0" Y2="-80" Stroke="Black" StrokeThickness="6" Canvas.Left="431" Canvas.Top="296"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="295"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="285"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="275"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="265"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="255"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="245"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
+            <Rectangle Fill="#494848" Height="50" Width="50" Canvas.Left="381" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
+            <Rectangle Fill="#494848" Height="50" Width="50" Canvas.Left="431" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
+          
         </Canvas>
         <Popup x:Name="PopupPatientRoom"
                    AllowsTransparency="True"
