--- a/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
+++ b/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="sections">
-        <form [formGroup]="createForm" (ngSubmit)="onSubmit()">
+        <form enctype="multipart/form-data" [formGroup]="createForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 
                 <mat-form-field>
@@ -62,7 +62,7 @@
 
                 <mat-form-field>
                     <mat-label>Gender*</mat-label>
-                    <mat-select id="gender" name="gender" formControlName="gender">
+                    <mat-select id="gender" name="gender" formControlName="gender" (selectionChange)=selectedGender($event)>
                         <mat-option value="M">Male</mat-option>
                         <mat-option value="F">Female</mat-option>
                     </mat-select>
@@ -114,7 +114,7 @@
                 <div class="inputField">
                     <mat-form-field>
                         <mat-label>Education level*</mat-label>
-                        <mat-select id="educationLevel" name="educationLevel" formControlName="educationLevel">
+                        <mat-select id="educationLevel" name="educationLevel" formControlName="educationLevel" (selectionChange)=selectedEducationalLevel($event)>
                             <mat-option value="primary">Primary</mat-option>
                             <mat-option value="secondary">Secondary</mat-option>
                             <mat-option value="bachelor">Bechelor</mat-option>
@@ -127,10 +127,9 @@
                 </div>
 
                 <div class="inputField">
-                    <mat-form-field>
-                        <mat-label>Choose photo</mat-label>
-                        <input matInput id="photo" name="photo"> 
-                    </mat-form-field>
+                
+                        <input type="file" #file id="photo" name="photo" formControlName="photo" (change)="uploadFile(file.files)" style="display: none;">   
+                        <button mat-raised-button (click)="file.click()">Upload</button>
                 </div>
             </div>
 
@@ -200,6 +199,34 @@
                         <mat-error *ngIf="!createForm.get('floor').valid && createForm.get('floor').touched && createForm.get('floor').errors['pattern']">Please enter vaid floor</mat-error>
                     </mat-form-field>
                 </div>
+                <div class="inputField">
+                    <mat-form-field>
+                        <mat-label>City*</mat-label>
+                        <input matInput id="city" placeholder="City" formControlName="city">
+                        <mat-error *ngIf="!createForm.get('city').valid && createForm.get('city').touched && createForm.get('city').errors['required']">Please enter city</mat-error>
+                    <mat-error *ngIf="!createForm.get('city').valid && createForm.get('city').touched && createForm.get('city').errors['pattern']">Please enter valid city</mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row sections">
+                <mat-form-field>
+                    <mat-label>Postal code*</mat-label>
+                    <input matInput id="postalCode" placeholder="Postal code" formControlName="postalCode">
+                    <mat-error *ngIf="!createForm.get('postalCode').valid && createForm.get('postalCode').touched && createForm.get('postalCode').errors['required']">Please enter postal code</mat-error>
+                    <mat-error *ngIf="!createForm.get('postalCode').valid && createForm.get('postalCode').touched && createForm.get('postalCode').errors['pattern']">Please enter valid postal code</mat-error>
+                </mat-form-field>
+
+                <div class="inputField">
+                    <mat-form-field>
+                        <mat-label>State*</mat-label>
+                        <input matInput id="state" placeholder="State" formControlName="state">
+                        <mat-error *ngIf="!createForm.get('state').valid && createForm.get('state').touched && createForm.get('state').errors['required']">Please enter state</mat-error>
+                        <mat-error *ngIf="!createForm.get('state').valid && createForm.get('state').touched && createForm.get('state').errors['pattern']">Please valid state</mat-error>
+                    </mat-form-field>
+                </div>
+        
+               
+                
             </div>
 
             <div class="row heading-row">
@@ -251,7 +278,7 @@
                 <div class="row">
                     <mat-form-field>
                         <mat-label>Patient condition</mat-label>
-                        <mat-select id="patientCondition" name="patientCondition" formContronName="patientCondition">
+                        <mat-select id="patientCondition" name="patientCondition" formContronName="patientCondition" (selctionChange)=selectedPatientCondition($event)>
                             <mat-option value="Stable">Stable</mat-option>
                             <mat-option value="Urgent">Urgent</mat-option>
                             <mat-option value="HospitalTreatment">HospitalTreatment</mat-option>
@@ -262,7 +289,7 @@
                     <div class="inputField">
                         <mat-form-field>
                             <mat-label>Blood type</mat-label>
-                            <mat-select>
+                            <mat-select id="bloodType" name="bloodType" formControlName="bloodType" (selectionChange)=selectedBloodType($event)>
                                 <mat-option value="ONeg">ONeg</mat-option>
                                 <mat-option value="OPlus">OPlus</mat-option>
                                 <mat-option value="ANeg">ANeg</mat-option>
@@ -277,14 +304,18 @@
                     <div class="inputField">
                         <mat-form-field>
                             <mat-label>Choosen doctor*</mat-label>
-                            <input matInput id="choosenDoctor" name="choosenDoctor" formControlName="choosenDoctor">
+                            <mat-select id="choosenDoctor" name="choosenDoctor" formControlName="choosenDoctor" (selectionChange)="getDoctor($event)">
+                                <mat-option *ngFor="let doctor of searchDoctors" value={{doctor.id}}>
+                                    {{doctor.fullName}}
+                                </mat-option>
+                            </mat-select>
                             <mat-error *ngIf="!createForm.get('choosenDoctor').valid && createForm.get('choosenDoctor').touched && createForm.get('choosenDoctor').errors['required']">Please enter choosen doctor</mat-error>
                         </mat-form-field>
                     </div>
                 </div>
             </div>
             <div class="row sections">
-                <button mat-flat-button color="primary" type="submit" [disabled]="!createForm.valid">Register</button>
+                <button mat-flat-button color="primary" type="submit" [disabled]="">Register</button>
             </div>
             
 
