--- a/GraphicEditor/View/MainPage.xaml
+++ b/GraphicEditor/View/MainPage.xaml
@@ -40,13 +40,13 @@
                         </ComboBox>
                         <Label Content="H1 Floors:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="120" Margin="0,-7,0,0"/>
                         <ComboBox SelectionChanged="comboBoxH1_SelectionChanged"  x:Name="comboBoxH1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="0,28,0,0">
-                            <ComboBoxItem Content="Ground level"/>
+                            <ComboBoxItem Content="Ground floor"/>
                             <ComboBoxItem Content="First floor" />
                             <ComboBoxItem Content="Second floor" />
                         </ComboBox>
                         <Label Content="H2 Floors:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="120" Margin="0,109,0,0"/>
                         <ComboBox SelectionChanged="comboBoxH2_SelectionChanged" x:Name="comboBoxH2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="0,143,0,0">
-                            <ComboBoxItem Content="Ground level"/>
+                            <ComboBoxItem Content="Ground floor"/>
                             <ComboBoxItem Content="First floor"/>
                             <ComboBoxItem Content="Secod floor"/>
                         </ComboBox>
