--- a/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
@@ -1,255 +1,151 @@
-<div>
+<div style="text-align: center;">
     <h1>Prescription search</h1>
 </div>
-<form class="container">   
-    <table>
-    <tr style="width:50%">
-    
-    <mat-radio-group aria-label="Select an option" style="visibility: hidden;">
-        <mat-radio-button value="1">AND</mat-radio-button>
-        <mat-radio-button value="2">OR</mat-radio-button>
-    </mat-radio-group>
-   
+<form class="container" [formGroup]="prescriptionForm"> 
+<div>
+    <a mat-raised-button routerLink="/reportSearch" target="_blank">Search reports</a>
+</div>
 
-   
+<div style="text-align: justify;margin-top: 15px;">
+    <div>
+        <mat-radio-group aria-label="Select an option" formControlName="radios" style="visibility: hidden;">
+            <mat-radio-button value="1">AND</mat-radio-button>
+            <mat-radio-button value="2">OR</mat-radio-button>
+        </mat-radio-group>
+    
+
+    
+        <mat-form-field appearance="fill" class="fix-margins">
+            <mat-label>Choose option</mat-label>
+            <mat-select formControlName="selectedOption">
+                <mat-option value="Search by medicine">Search by medicine</mat-option>
+                <mat-option value="Search by hourly intake">Search by hourly intake</mat-option>
+                <mat-option value="Search by reservation period">Search by reservation period</mat-option>
+            </mat-select>
+        </mat-form-field>
+    
+    
+    
+        <span *ngIf="prescriptionForm.get('selectedOption').value === 'Search by medicine'">
+            <mat-form-field appearance="fill" class="fix-margins">
+                <mat-label>Medicine</mat-label>
+                <input matInput [formControl]="med">
+                <mat-error *ngIf="med.hasError('pattern') && !med.hasError('required')">
+                    Must contain letters only
+                </mat-error>
+                <mat-error *ngIf="med.hasError('required')">
+                    Can not be empty
+                </mat-error>
+            </mat-form-field>
+        </span> 
+        
+        <span *ngIf="prescriptionForm.get('selectedOption').value === 'Search by hourly intake'">
+            <mat-form-field appearance="fill" class="fix-margins">
+                <mat-label>Hourly intake</mat-label>
+                <input matInput [formControl]="hour">
+                <mat-error *ngIf="hour.hasError('pattern') && !hour.hasError('required')">
+                    Must be a number 0-9
+                </mat-error>
+                <mat-error *ngIf="hour.hasError('required')">
+                    Can not be empty
+                </mat-error>
+            </mat-form-field>
+        </span>  
+
+        <span *ngIf="prescriptionForm.get('selectedOption').value === 'Search by reservation period'">
+            <mat-form-field appearance="fill" class="fix-margins">
+                <mat-label>Enter a date range</mat-label>
+                <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                <input matStartDate formControlName="start" placeholder="Start date">
+                <input matEndDate formControlName="end" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            
+                <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+                <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+            </mat-form-field>
+        </span>
+       
+    </div>   
+        
+       
+    
+    <div formArrayName="duplicates" *ngFor="let creds of prescriptionForm.get('duplicates')['controls']; let i = index;">
+    
+    <div formGroupName="{{i}}">
+    <mat-radio-group aria-label="Select an option" formControlName="radios2">
+    <mat-radio-button value="1">AND</mat-radio-button>
+    <mat-radio-button value="2">OR</mat-radio-button>
+    </mat-radio-group>
+
+
+
     <mat-form-field appearance="fill" class="fix-margins">
         <mat-label>Choose option</mat-label>
-        <mat-select [(ngModel)]="selectedOption" name="opt">
-        <mat-option *ngFor="let opt of options" [value]="opt">
-            {{opt}}
-        </mat-option>
+        <mat-select formControlName="selectedOption2">
+            <mat-option value="Search by medicine">Search by medicine</mat-option>
+            <mat-option value="Search by hourly intake">Search by hourly intake</mat-option>
+            <mat-option value="Search by reservation period">Search by reservation period</mat-option>
         </mat-select>
     </mat-form-field>
-    
-    
-    
-    <span *ngIf="selectedOption === 'Search by medicine'">
+
+
+
+    <span *ngIf="prescriptionForm.get('duplicates.0').value.selectedOption2 === 'Search by medicine'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Medicine</mat-label>
-            <input matInput [formControl]="med">
-            <mat-error *ngIf="med.hasError('pattern') && !med.hasError('required')">
+            <input matInput [formControl]="med2">
+            <mat-error *ngIf="med2.hasError('pattern') && !med2.hasError('required')">
                 Must contain letters only
             </mat-error>
-            <mat-error *ngIf="med.hasError('required')">
+            <mat-error *ngIf="med2.hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
     </span> 
     
-    <span *ngIf="selectedOption === 'Search by hourly intake'">
+    <span *ngIf="prescriptionForm.get('duplicates.0').value.selectedOption2 === 'Search by hourly intake'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Hourly intake</mat-label>
-            <input matInput [formControl]="hour">
-            <mat-error *ngIf="hour.hasError('pattern') && !hour.hasError('required')">
+            <input matInput [formControl]="hour2">
+            <mat-error *ngIf="hour2.hasError('pattern') && !hour2.hasError('required')">
                 Must be a number 0-9
             </mat-error>
-            <mat-error *ngIf="hour.hasError('required')">
+            <mat-error *ngIf="hour2.hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
     </span>  
 
-    <span *ngIf="selectedOption === 'Search by reservation period'">
+    <span *ngIf="prescriptionForm.get('duplicates.0').value.selectedOption2 === 'Search by reservation period'">
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-            <input matStartDate formControlName="start" placeholder="Start date">
-            <input matEndDate formControlName="end" placeholder="End date">
+            <mat-date-range-input [formGroup]="range2" [rangePicker]="picker2">
+            <input matStartDate formControlName="start2" placeholder="Start date">
+            <input matEndDate formControlName="end2" placeholder="End date">
             </mat-date-range-input>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker2></mat-date-range-picker>
         
-            <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-            <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+            <mat-error *ngIf="range2.controls.start2.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+            <mat-error *ngIf="range2.controls.end2.hasError('matEndDateInvalid')">Invalid end date</mat-error>
         </mat-form-field>
     </span>
-    
-    </tr>
 
-    <tr>
-    
-        <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">AND</mat-radio-button>
-            <mat-radio-button value="2">OR</mat-radio-button>
-        </mat-radio-group>
-        
-    
-        <mat-form-field appearance="fill" class="fix-margins">
-            <mat-label>Choose option</mat-label>
-            <mat-select [(ngModel)]="selectedOption2" name="opt2">
-                <mat-option *ngFor="let opt2 of options2" [value]="opt2">
-                    {{opt2}}
-                </mat-option>
-                
-            </mat-select>
-        </mat-form-field>
-                
-        <span *ngIf="selectedOption2 === 'Search by medicine'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Medicine</mat-label>
-                <input matInput [formControl]="med2">
-                <mat-error *ngIf="med2.hasError('pattern') && !med2.hasError('required')">
-                    Must contain letters only
-                </mat-error>
-                <mat-error *ngIf="med2.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span> 
-        
-        
-        <span *ngIf="selectedOption2 === 'Search by hourly intake'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Hourly intake</mat-label>
-                <input matInput [formControl]="hour2">
-                <mat-error *ngIf="hour2.hasError('pattern') && !hour2.hasError('required')">
-                    Must be a number 0-9
-                </mat-error>
-                <mat-error *ngIf="hour2.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span>  
-        
-          
-        <span *ngIf="selectedOption2 === 'Search by reservation period'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [formGroup]="range2" [rangePicker]="picker2">
-                <input matStartDate formControlName="start2" placeholder="Start date">
-                <input matEndDate formControlName="end2" placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-date-range-picker #picker2></mat-date-range-picker>
-            
-                <mat-error *ngIf="range2.controls.start2.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-                <mat-error *ngIf="range2.controls.end2.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-            </mat-form-field>
-        </span>
-    </tr>
+    <span style="margin-left: 10px;">
+    <button mat-raised-button color="warn" (click)="removeDuplicates(i)">Remove</button>
+    </span>
+    </div>
+    </div>
 
-    <tr>
-        <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">AND</mat-radio-button>
-            <mat-radio-button value="2">OR</mat-radio-button>
-        </mat-radio-group>
-        
-    
-        <mat-form-field appearance="fill" class="fix-margins">
-            <mat-label>Choose option</mat-label>
-            <mat-select [(ngModel)]="selectedOption3" name="opt3">
-                <mat-option *ngFor="let opt3 of options3" [value]="opt3">
-                    {{opt3}}
-                </mat-option>
-                
-            </mat-select>
-        </mat-form-field>
-                
-        <span *ngIf="selectedOption3 === 'Search by medicine'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Medicine</mat-label>
-                <input matInput [formControl]="med3">
-                <mat-error *ngIf="med3.hasError('pattern') && !med3.hasError('required')">
-                    Must contain letters only
-                </mat-error>
-                <mat-error *ngIf="med3.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span> 
-        
-        
-        <span *ngIf="selectedOption3 === 'Search by hourly intake'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Hourly intake</mat-label>
-                <input matInput [formControl]="hour3">
-                <mat-error *ngIf="hour3.hasError('pattern') && !hour3.hasError('required')">
-                    Must be a number 0-9
-                </mat-error>
-                <mat-error *ngIf="hour3.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span>  
-        
-          
-        <span *ngIf="selectedOption3 === 'Search by reservation period'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [formGroup]="range3" [rangePicker]="picker3">
-                <input matStartDate formControlName="start3" placeholder="Start date">
-                <input matEndDate formControlName="end3" placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-                <mat-date-range-picker #picker3></mat-date-range-picker>
-            
-                <mat-error *ngIf="range3.controls.start3.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-                <mat-error *ngIf="range3.controls.end3.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-            </mat-form-field>
-        </span>
-    </tr>
+    <div>
+        <button mat-raised-button color="primary" (click)="addDuplicates()">Add</button>
+    </div>
 
-    <tr>
-        <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">AND</mat-radio-button>
-            <mat-radio-button value="2">OR</mat-radio-button>
-        </mat-radio-group>
-        
-    
-        <mat-form-field appearance="fill" class="fix-margins">
-            <mat-label>Choose option</mat-label>
-            <mat-select [(ngModel)]="selectedOption4" name="opt4">
-                <mat-option *ngFor="let opt4 of options4" [value]="opt4">
-                    {{opt4}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-                
-        <span *ngIf="selectedOption4 === 'Search by medicine'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Medicine</mat-label>
-                <input matInput [formControl]="med4">
-                <mat-error *ngIf="med4.hasError('pattern') && !med4.hasError('required')">
-                    Must contain letters only
-                </mat-error>
-                <mat-error *ngIf="med4.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span> 
-        
-        
-        <span *ngIf="selectedOption4 === 'Search by hourly intake'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Hourly intake</mat-label>
-                <input matInput [formControl]="hour4">
-                <mat-error *ngIf="hour4.hasError('pattern') && !hour4.hasError('required')">
-                    Must be a number 0-9
-                </mat-error>
-                <mat-error *ngIf="hour4.hasError('required')">
-                    Can not be empty
-                </mat-error>
-            </mat-form-field>
-        </span>  
-        
-          
-        <span *ngIf="selectedOption4 === 'Search by reservation period'">
-            <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [formGroup]="range4" [rangePicker]="picker4">
-                <input matStartDate formControlName="start4" placeholder="Start date">
-                <input matEndDate formControlName="end4" placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
-                <mat-date-range-picker #picker4></mat-date-range-picker>
-            
-                <mat-error *ngIf="range4.controls.start4.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-                <mat-error *ngIf="range4.controls.end4.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-            </mat-form-field>
-        </span>
-    </tr>
-    </table>
-
+    <div style="margin-top: 10px;" >
     <button mat-raised-button color="primary">Search</button>
-    
+    </div>
+</div>
+
 </form>
