:white_check_mark: :construction: added integration test for getting prescriptions and updated model for prescriptions

--- a/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-search/prescription-search.component.html
@@ -149,3 +149,9 @@
 </div>
 
 </form>
+
+<table>
+    <tr *ngFor="let prescription of allPrescriptions">
+        <td *ngFor="let items of prescription"></td>
+    </tr>
+</table>
