:iphone: Finished designing front view

--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -4,48 +4,42 @@
             <mat-card-title>Patient Information</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <p>Name : {{ medicalRecord.Name }}</p>
-            <p>Surname : {{ medicalRecord.Surname }}</p>
-            <p>Gender : {{ medicalRecord.Gender }}</p>
-            <p>Date of birth: {{ medicalRecord.DateOfBirth | date : 'dd/MM/yyyy'}}</p>
-            <p>Blood type: {{ medicalRecord.BloodType }}</p>
-            <p>Address : {{ medicalRecord.Street }} {{ medicalRecord.Number }} / {{ medicalRecord.Apartment }} , {{ medicalRecord.City }} , {{ medicalRecord.State }}</p>
-            <p>Phone number : {{ medicalRecord.Phone }}</p>
-            <p>E-mail : {{ medicalRecord.Email }}</p>
-            <p>Insurance policy provider : {{ medicalRecord.InsurancePolicyCompany }}</p>
-            <p>Patient condition : {{medicalRecord.PatientCondition }}</p>
+            <p class="content-paragraph">Full Name : <strong>{{ medicalRecord.Name }} {{ medicalRecord.Surname }}</strong></p>
+            <p class="content-paragraph">ID Number: <strong>{{ medicalRecord.PatientId }}</strong></p>
+            <p class="content-paragraph">Gender : <strong>{{ medicalRecord.Gender }}</strong></p>
+            <p class="content-paragraph">Date of birth: <strong>{{ medicalRecord.DateOfBirth | date : 'dd/MM/yyyy'}}</strong></p>
+            <p class="content-paragraph">Blood type: <strong>{{ medicalRecord.BloodType }}</strong></p>
+            <p class="content-paragraph">Address : <strong>{{ medicalRecord.Street }} {{ medicalRecord.Number }} , {{ medicalRecord.City }} , {{ medicalRecord.State }}</strong></p>
+            <p class="content-paragraph">Phone number : <strong>{{ medicalRecord.Phone }}</strong></p>
+            <p class="content-paragraph">E-mail : <strong>{{ medicalRecord.Email }}</strong></p>
+            <p class="content-paragraph">Insurance policy provider : <strong>{{ medicalRecord.InsurancePolicyCompany }}</strong></p>
+            <p class="content-paragraph">Patient condition : <strong>{{medicalRecord.PatientCondition }}</strong></p>
         </mat-card-content>
         <mat-card-footer>
             <mat-tab-group>
                 <mat-tab label="Allergies">
-                    <table>
-                        <th> &nbsp;</th>
+                    <table class="table"> 
                         <th> Name </th>
                         <tr *ngFor="let allergen of medicalRecord.Allergies">
-                            <td> &nbsp; </td>
                             <td>{{ allergen }}</td>
                         </tr>
                     </table>
                 </mat-tab>
                 <mat-tab label="Vaccines">
-                    <table>
-                        <th> &nbsp;</th>
+                    <table class="table">
                         <th> Name </th>
                         <tr *ngFor="let vaccine of medicalRecord.Vaccines">
-                            <td> &nbsp; </td>
                             <td>{{ vaccine }}</td>
                         </tr>
                     </table>
                 </mat-tab>
                 <mat-tab label="Illness history">
-                    <table>
-                        <th> &nbsp;</th>
+                    <table class="table">
                         <th> Diagnoses </th>
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
                         <th> Symptoms </th>
                         <tr *ngFor="let name of medicalRecord.IllnessHistoryName">
-                            <td> &nbsp; </td>
                             <td> {{ name }} </td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
@@ -54,15 +48,13 @@
                     </table>
                 </mat-tab>
                 <mat-tab label="Family illness history">
-                    <table>
-                        <th> &nbsp;</th>
+                    <table class="table">
                         <th> Relative </th>
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
                         <th> Diagnoses </th>
                         <tr>
                             <td> {{ medicalRecord.FamilyIllnessHistoryRelatives }} </td>
-                            <td> &nbsp; </td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td> {{ medicalRecord.FamilyIllnessHistoryDiagnosis }} </td>
@@ -70,14 +62,12 @@
                     </table>
                 </mat-tab>
                 <mat-tab label="Therapies">
-                    <table>
-                        <th> &nbsp;</th>
+                    <table class="table"> 
                         <th> Hour consumption </th>
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
                         <th> Medication </th>
                         <tr *ngFor="let hourConsumption of medicalRecord.TherapiesHourConsumption">
-                            <td> &nbsp; </td>
                             <td> {{ hourConsumption }} </td>
                             <td> &nbsp; </td>
                             <td> &nbsp; </td>
