--- a/GraphicEditor/View/AdditionalInformationPatientRoom.xaml
+++ b/GraphicEditor/View/AdditionalInformationPatientRoom.xaml
@@ -8,7 +8,7 @@
         Title="AdditionalInformationPatientRoom" Height="350" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" BorderBrush="Black">
     <Grid>
         <StackPanel Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
-            <Image Width="60" Margin="5,0,0,0" Source="/WhiteLogo.png"/>
+            <Image Width="60" Margin="5,0,0,0" Source="/View/WhiteLogo.png"/>
             <Label Content="Additiondal information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
         </StackPanel>
         <Label Content="Floor" HorizontalAlignment="Left" Margin="98,61,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
@@ -23,7 +23,6 @@
         <TextBox HorizontalAlignment="Left" Height="22" Margin="210,159,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
         <TextBox HorizontalAlignment="Left" Height="24" Margin="210,189,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
         <TextBox HorizontalAlignment="Left" Height="24" Margin="210,221,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
-        <Button x:Name="Ok" Content="Ok" HorizontalAlignment="Left" Height="30" Margin="138,274,0,0" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" FontSize="20" Click="Ok_Click" />
-
+        <Button x:Name="Ok" Content="Ok" HorizontalAlignment="Left" Height="30" Margin="138,274,0,0" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" FontSize="20" Click="Ok_Click"/>
     </Grid>
 </Window>
